ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitops-test-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: gitops-test
          servicePort: 8080
